# conquest_c_pointer-kmaebashi

./: CMakeLists.txt  README.md
chapter_1/: CMakeLists.txt  array.c  array2.c  get_word.c  pointer.c  pointer_calc.c
chapter_2/: alignment.c  auto.c  byteorder.c  free.c  page_062.c  page_063.c  page_070.c  page_086.c  print_address.c  quick_sort.c  tiny_printf.c  vmtest.c
chapter_3/: page_115.c  page_119.c  page_127.c  page_128.c  page_129.c  page_137.c  page_149.c  page_150_1.c  page_150_2.c  page_152.c  page_160.c
chapter_4/: array_argument.c  cat.c  output_argument.c  read_file.c  read_line.c  read_line.h  read_slogan.c  realloc.c  variable_array.c
chapter_5/word_count_array/: CMakeLists.txt  add_word.c  dump_word.c  finalize.c  get_word.c  get_word.h  initialize.c  main.c  word_manage_p.h
chapter_5/word_count_list/: add_word.c  initialize.c  word_manage.h  word_manage_p.h
